app/styles/_sweco.scss
// Sweco

html,
body
{
  height: 100%;
  min-height: 100%;
}

// Fixed body for non scroll content
.body-fixed
{
  overflow: hidden;
}

// If .navbar-north add .navbarNorth class to body
body.navbarNorth
{
  padding-top: $navbar-north-height;
  @include media-breakpoint-down(sm)
  {
    padding-top: (($navbar-north-height * 2) - 10px);
  }
}

// If .navbar-south add .navbarSouth class to body
body.navbarSouth
{
  padding-bottom: $navbar-south-height;
}

// Modal open fix scrollbar jumps IE and if body height is higher than vh so scrollbar is visible
.ie body.modal-open
{
  .navbar-fixed-top,
  .navbar-fixed-bottom
  {
    margin-left: -17px !important;
  }
}

// Container
.container,
.container-fluid
{
  position: relative;
  @include media-breakpoint-up(sm)
  {
    padding-left: $grid-gutter-width !important;
    padding-right: $grid-gutter-width !important;
  }
}

// Remove IE clear and reveal on inputs
::-ms-clear
{
  display: none;
}

::-ms-reveal
{
  display: none;
}

// Text selection
::selection
{
  background: $gray-lighter;
}
::-moz-selection
{
  background: $gray-lighter;
}

// Pointer events
.pointer-events-none
{
  -webkit-touch-callout: none;
  user-select: none;
  pointer-events: none;
  cursor: default;
}

.pointer-events-all
{
  -webkit-touch-callout: default;
  user-select: all;
  pointer-events: all;
  cursor: pointer;
}

// User select
.user-select-none
{
  user-select: none;
}

.user-select-all
{
  user-select: all;
}

// Inner scroll
.inner
{
  width: 100%;
  height: 100%;
  overflow-x: auto;
  overflow-y: auto;
  overflow-scrolling: touch;
}

// Inner scroll-y
.inner-y
{
  @extend .inner;
  overflow-x: hidden;
}

// Inner scroll-x
.inner-x
{
  @extend .inner;
  overflow-y: hidden;
}

// Hide
.hide
{
  display: none !important;
}

// Typography
h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6,
legend,
label,
strong, b, dt, th,
.btn, .nav, .pagination, .tag, .breadcrumb, .list-group
{
  font-family: $headings-font-family;
  font-weight: normal !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

// Typography uppercase
h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6,
legend,
label,
th,
.btn, .nav, .pagination, .tag, .breadcrumb, .list-group
{
  text-transform: uppercase;
}

// Headings color
h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6,
legend,
label,
dt, th
{
  color: $headings-color;
}

h1,
.h1
{
  line-height: $line-height-h1;
}

h2,
.h2
{
  line-height: $line-height-h2;
}

h3,
.h3
{
  line-height: $line-height-h3;
}

h4,
.h4
{
  line-height: $line-height-h4;
}

h5,
.h5
{
  line-height: $line-height-h5;
}

h6,
.h6
{
  line-height: $line-height-h6;
}

// Typography size class
.font-size-xs
{
  font-size: $font-size-xs;
}
.font-size-sm
{
  font-size: $font-size-sm;
}
.font-size-base
{
  font-size: $font-size-base;
}
.font-size-lg
{
  font-size: $font-size-lg;
}
.font-size-xl
{
  font-size: $font-size-xl;
}

.display-1,
.display-2,
.display-3,
.display-4
{
  font-family: $font-family-regular;
  text-transform: none;
}

.display-1
{
  line-height: $line-height-display-1;
}

.display-2
{
  line-height: $line-height-display-2;
}

.display-3
{
  line-height: $line-height-display-3;
}

.display-4
{
  line-height: $line-height-display-4;
}

.page-header
{
  padding: ($spacer-y * 2) 0;
}

.lead,
blockquote
{
  font-family: $font-family-base;
  font-size: $font-size-base !important;
  line-height: $line-height-base !important;
  border: 0 !important;
  @include media-breakpoint-up(sm)
  {
    font-size: $font-size-lg !important;
    line-height: $lead-line-height !important;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
  .blockquote-footer
  {
    margin-left: ($spacer-x / 2);
    margin-right: ($spacer-x / 2);
    &:before,
    &:after
    {
      content: "" !important;
    }
  }
}

address,
cite
{
  font-style: normal;
}

cite
{
  text-transform: uppercase;
  &:before
  {
    content: "\002D \00A0";
  }
}

.text-muted
{
  font-size: inherit;
}

// Label
label,
.label
{
  @extend .user-select-none;
  cursor: pointer;
}

// Code
pre
{
  background-color: $code-bg;
  padding: $code-padding-y $code-padding-x;
  margin: $spacer-y 0;
}

samp
{
  font-size: $font-size-sm;
}

// White text
.white-text
{
  color: $white;
  h1, h2, h3, h4, h5, h6,
  .h1, .h2, .h3, .h4, .h5, .h6,
  legend,
  label,
  p, li, dt, dd, th, td,
  .lead,
  blockquote
  {
    color: inherit;
  }
  a
  {
    text-decoration: underline;
    color: $white;
    @include hover-focus
    {
      color: $white;
    }
  }
}

// Table
.table
{
  @extend .table-sm;
  &.table-bordered
  {
    thead
    {
      th
      {
        border-bottom-width: 1px;
      }
    }
    tr
    {
      transition: $transition;
    }
  }
}

// Icon spacing
.btn
{
  > .fa
  {
    margin-right: 10px;
    &.fa-angle-left,
    &.fa-angle-right
    {
      @extend .fa-lg;
      vertical-align: -8% !important;
    }
  }
}

.icon-right,
.fa-right
{
  margin-right: 0 !important;
  margin-left: 10px !important;
}

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6
{
  > .fa
  {
    margin-right: 10px;
  }
}
/* ... */

